fix spacing

--- a/app/styles/layout/_card-container.scss
+++ b/app/styles/layout/_card-container.scss
@@ -8,6 +8,6 @@
 
   @include mq(desktop) {
     height: calc(100vh - 100px);
-    padding: $margin-base*2;
+    padding-right: $margin-base;
   };
 }
