--- a/app/styles/layout/_sidebar.scss
+++ b/app/styles/layout/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  min-width: 200px;
+  min-width: 240px;
   margin-bottom: $margin-base*2;
 
 	@include mq(tablet) {
